--- a/referral_system/account/templates/account/profile.html
+++ b/referral_system/account/templates/account/profile.html
@@ -8,41 +8,41 @@
 <body>
 
 <div class="container my-5">
-    <h1>Профиль</h1>
-    <p>Номер телефона: {{ user_data.phone_number }}</p>
-    <p>Личный код приглашения: {{ user_data.invite_code }}</p>
-    {% if user_data.invited_by %}
-    <p>Код приглашения другого пользователя: {{ user_data.invited_by.phone_number }}</p>
-    {% endif %}
+    <div class="row">
+        <div class="col-md-6">
+            <h1>Профиль</h1>
+            <p>Номер телефона: {{ user_data.phone_number }}</p>
+            <p>Личный код приглашения: {{ user_data.invite_code }}</p>
+        </div>
+        <div class="col-md-6">
+            {% if user_data.invited_by %}
+                <p>Код приглашения другого пользователя: {{ user_data.invited_by }}</p>
+            {% endif %}
+        </div>
+    </div>
+
     <h2>Invited Users</h2>
     <ul>
         {% for invited_user in user_data.invited_users.all %}
-        <li>{{ invited_user.phone_number }}</li>
+            <li>{{ invited_user.phone_number }}</li>
         {% empty %}
-        <li>No invited users yet.</li>
+            <li>No invited users yet.</li>
         {% endfor %}
     </ul>
-    <form method="post">
-        {% csrf_token %}
-        <div class="form-group">
-            <label for="invite_code">Введите код приглашения</label>
-            <input type="text" class="form-control" id="invited_by" name="invited_by" minlength="6" maxlength="6" required>
-        </div>
-        <button type="submit">Activate Invite Code</button>
-    </form>
+
+    {% if not user_data.invited_by %}
+        <form method="post">
+            {% csrf_token %}
+            <div class="form-group">
+                <label for="invited_by">Введите код приглашения</label>
+                <input class="form-control" id="invited_by" name="invited_by" minlength="6" maxlength="6" required>
+            </div>
+            <button type="submit">Activate Invite Code</button>
+        </form>
+    {% endif %}
 </div>
+
 </body>
 </html>
 
-<!--<!DOCTYPE html>-->
-<!--<html>-->
-<!--<head>-->
-<!--    <title>User Profile</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--    <h1>User Profile</h1>-->
-<!--    <p>Phone Number: {{ user_data.phone_number }}</p>-->
-<!--    <p>Invite Code: {{ user_data.invite_code }}</p>-->
-<!--    <p>Activated Invite Code: {{ user_data.activated_invite_code }}</p>-->
-<!--</body>-->
-<!--</html>-->
+
